glxinfo: fix issues in visual_drawable_type()

Fixes bug http://bugs.freedesktop.org/show_bug.cgi?id=36959

Signed-off-by: Brian Paul <brianp@vmware.com>